added footer and time section

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="images/code.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/code.png" type="image/x-icon">    
     <title>CF-Solver</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 </head>
 <body>
     <div class="container">
@@ -85,12 +86,32 @@
                     <div class="check"><input type="checkbox" name="two pointers" id="tags">two pointers</div>
                 </div>
             </div>
-            <!-- <div class="timer">
+            <div class="timer">
                 <h3>Select Time:</h3>
-
-            </div>             -->
+                <div class="timer-div">
+                    <div class="timer-form">
+                        <input type="text" name="hours" id="hour" value=0>
+                        <label for="hour">hours</label>
+                    </div>
+                    <div class="timer-form">
+                        <input type="text" name="minutes" id="minute" value=0>
+                        <label for="hour">minutes</label>
+                    </div>
+                    <div class="timer-form">
+                        <input type="text" name="hours" id="second" value=0>
+                        <label for="hour">seconds</label>
+                    </div>
+                </div>
+            </div>            
         </div>
-        <button>Proceed</button>
+        <button>Click to start solving</button>
+    </div>
+    <div class="footer">
+        <p>Developed with ❤ by Abhishek Pratap Singh</p>
+        <div class="contact-links">
+            <a href="https://www.linkedin.com/in/abhishek-pratap-singh-33280a1b9/" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/abhishek-singh31" target="_blank"><i class="fab fa-github"></i></a>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
