--- a/index.html
+++ b/index.html
@@ -145,13 +145,13 @@
 
     <!-- Footer Section -->
 
-    <div class="footer before">
+<!--     <div class="footer before">
         <p>Developed with ❤ by Abhishek Pratap Singh</p>
         <div class="contact-links">
             <a href="https://www.linkedin.com/in/abhishek-pratap-singh-33280a1b9/" target="_blank"><i class="fab fa-linkedin"></i></a>
             <a href="https://github.com/abhishek-singh31" target="_blank"><i class="fab fa-github"></i></a>
         </div>
-    </div>
+    </div> -->
 
     <!-- Modals Section -->
     
